avoid deprecated call newÌnstance